src/test/ui/issues/issue-17718-const-privacy.stderr
error[E0603]: constant `B` is private
  --> $DIR/issue-17718-const-privacy.rs:5:8
   |
LL | use a::B;
   |        ^

error[E0603]: constant `BAR` is private
  --> $DIR/issue-17718-const-privacy.rs:8:5
   |
LL |     BAR,
   |     ^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0603`.
